2013-02-11  Dario Rodriguez <dario@artica.es>

	* include/functions_db.php: Modified ACL function to enable standar user
	to create and update customer information.
	* operation/contacts/contact_detail.php: Fixed a wrong default value in
	combo.
	* operation/companies/company_detail.php: Added ACL check to company management
	view.

2013-02-11  Dario Rodriguez <dario@artica.es>

	* operation/projects/task_detail.php: Fixed problem with ACL of project
	manager to create/edit tasks.

2013-02-11  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php: Added group all by default
	for standar users without group.

2013-02-04  Dario Rodriguez <dario@artica.es>

	* include/languages: Updated languages.

2013-02-04  Dario Rodriguez <dario@artica.es>

	* include/functions_form.php: Restored combo_incident_origin function

2013-02-01  Sancho Lerena <slerena@artica.es>

	* operation/download/browse.php: Fixed pagination.

2013-01-30  Sancho Lerena <slerena@artica.es>

	* operation/projects/task_planning.php,
	operation/user_report/report_full.php: Small fixes.

2013-01-30  Sancho Lerena <slerena@artica.es>

	* integria.centos.spec: new spec for centos/redhat. Deleted
	the old one for fedora.

	* integria.spec: Fixed problem with cron and with missing php dep.

2013-01-30  Dario Rodriguez <dario@artica.es>

	* DEBIAN/make_deb_package.sh: Fixed .svn delete folder command.
	* DEBIAN/control: Added php5-mycrypt package to dependences.
	* integria.spec: Changed version number.

2013-01-29  Sancho Lerena <slerena@artica.es>

	* include/functions_form.php: manage admin
	differently on show product categories.

	* wiki_data: Default data on wiki.

	* operation/download/manage_perms.php: Function to show
	categories manage admin in a special way.

	* operation/download/browse.php: Manage admin on different
	way.

2013-01-23  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_download_file.php: Fixed a problem